--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,25 @@
+aniso8601==3.0.2
+beautifulsoup4==4.7.1
+certifi==2019.3.9
+chardet==3.0.4
+Click==7.0
+Cython==0.27.3
 Flask==1.0.2
+Flask-GraphQL==2.0.0
+graphene==2.1.3
+graphql-core==2.1
+graphql-relay==0.4.5
+graphql-server-core==1.1.1
+gunicorn==19.9.0
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.1
+lxml==4.1.1
+MarkupSafe==1.1.1
+promise==2.2.1
+requests==2.21.0
+Rx==1.6.1
+six==1.12.0
+soupsieve==1.9.1
+urllib3==1.24.3
+Werkzeug==0.15.2
